# cremons-et-al-2022

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  lint.yml
data/: 650^oC.csv  700^oC.csv  750^oC.csv  800^oC.csv  Apollo15Sample15555ReddishBrownPyroxeneB.txt  Highlands_61221_Spectra.txt  Highlands_62231_Spectra.txt  Mare_70181_Spectra.txt  Mare_71061_Spectra.txt  Morb_D38A_Low_wavelength.txt
repro/: Hapke_Inverse_Function_Passive.m  Hapke_Lidar_R_Function.m  Hapke_Lidar_SSA_function.m  Hydrated_Regolith_Spectra_Generator_and_Retrieval.m  base.py  data_io.py  figure1.py  figure2.py  hapke.py  main.py  mixtures.py  results.ipynb  simulator.py  spectra.py
src/: Hapke_Inverse_Function_Passive.m  Hapke_Lidar_R_Function.m  Hapke_Lidar_SSA_function.m  Hydrated_Regolith_Spectra_Generator_and_Retrieval.m  README.txt
src/results/: 650^oC.CSV  700^oC.CSV  750^oC.CSV  800^oC.CSV
