[project]
name = "cremons-etal-2022"
version = "0.1.0"
description = """\
    Python reproduction of Cremons, Daniel R., \
    “Software for Simulating Lunar Surface Hydration \
    Measurements for Multispectral Lidar at 3 µm”. \
    Zenodo, Jul. 01, 2022. doi: 10.5281/zenodo.6025377. \
    """
requires-python = ">=3.8"
keywords = ["python", "nasa", "desci"]
authors = [
    {name = "Philip Linden", email = "phil@moondao.com"},
    {name = "Daniel R. Cremons"},
]
license = "CC-BY 4.0"
dependencies = [
    "matplotlib",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
