[project]
name = "cremons-etal-2022"
version = "0.1.0"
description = """\
    Python reproduction of Cremons, Daniel R., \
    “Software for Simulating Lunar Surface Hydration \
    Measurements for Multispectral Lidar at 3 µm”. \
    Zenodo, Jul. 01, 2022. doi: 10.5281/zenodo.6025377. \
    """
requires-python = ">=3.8"
keywords = ["python", "nasa", "desci", "simulation", "lunar"]
authors = [
  { name = "Philip Linden", email = "phil@moondao.com" },
  { name = "Daniel R. Cremons" },
]
license = { text = "CC-BY 4.0" }
dependencies = ["matplotlib", "notebook", "numpy>=1.20.0", "pandas", "scipy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80

[tool.ruff.format]
# use single quotes for non-triple quote strings.
quote-style = "single"
